[package]
name = "leetcode-fetcher"
version = "0.1.0"
edition = "2024"

[dependencies]
graphql_client = { version = "0.14.0", features = ["reqwest"] }
tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = "1.0.219"

[[bin]]
name = "leetcode-fetcher-cli"
path = "src/main.rs"

[lib]
name = "leetcode_fetcher"
path = "src/lib.rs"
