[package]
name = "leetcode-fetcher"
version = "0.1.0"
edition = "2024"

[dependencies]
graphql_client = { version = "0.14.0", features = ["reqwest"] }
tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = "1.0.219"
clap = { version = "4.5.40", features = ["derive", "usage", "wrap_help", "color", "suggestions", "help", "unicode", "error-context"] }
strum = { version = "0.27.2", features = ["default", "derive", "strum_macros"] }
serde_json = "1.0.142"

[[bin]]
name = "leetcode-fetcher-cli"
path = "src/main.rs"

[lib]
name = "leetcode_fetcher"
path = "src/lib.rs"
